Fix image size in small bubbles on smaller screens

--- a/frontend/src/css/_shapes.scss
+++ b/frontend/src/css/_shapes.scss
@@ -114,8 +114,8 @@
         min-height: 78px;
         border-radius: 50px;
         >img {
-            width: 45px;
-            height: 45px;
+            width: 60px;
+            height: 60px;
         }
     }
 }
