--- a/wordpress/gloggi-theme/files/css/main.css
+++ b/wordpress/gloggi-theme/files/css/main.css
@@ -930,8 +930,8 @@ label {
       min-height: 78px;
       border-radius: 50px; }
       .circle-small > img {
-        width: 45px;
-        height: 45px; } }
+        width: 60px;
+        height: 60px; } }
 
 .circle-notification {
   width: 40px;
